--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,14 @@ body {
     background-color: aquamarine;
 }
 
+#gameModeSelected > h1 {
+    font-size: 5rem;
+}
+
+
+#winnerAnnounced{
+    font-size: 2rem;
+}
 
 /* Used for styling divs */
 .centerStuff {
@@ -27,7 +35,7 @@ body {
 }
 
 .setImageSize{
-    height: 300px;
-    width: 300px;
+    height: 200px;
+    width: 200px;
 }
 
